--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,18 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.1",
+        "laravel/dusk": "^8.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "phpmd/phpmd": "^2.15",
+        "phpunit/phpunit": "^11.0.1",
+        "squizlabs/php_codesniffer": "^3.10",
+        "staudenmeir/dusk-updater": "^1.5"
     },
     "autoload": {
+        "psr-0": {"": "src"},
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
@@ -53,6 +58,7 @@
         }
     },
     "config": {
+        "bin-dir": "bin",
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
